--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="grid">
                 <div class="item">
                     <img src="./Poison Study.jpg" alt="Poison Study">
-                    <p>K-Beauty</p>
+                    <p>Poison Study</p>
                 </div>
                 <div class="item">
                     <img src="./The Promise of Heaven.jpg" alt="The Promise of Heaven">
@@ -323,4 +323,5 @@
         </div>
     </footer>
 </body>
+
 </html>
