--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <h2>Books</h2>
             <div class="grid">
                 <div class="item">
-                    <img src="./Poison Study.jpg" alt="Poison Study">
+                    <img src="./poison Study.jpg" alt="Poison Study">
                     <p>Poison Study</p>
                 </div>
                 <div class="item">
@@ -325,3 +325,4 @@
 </body>
 
 </html>
+
