--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
             <h2>Music & Instrumentes</h2>
             <div class="grid">
                 <div class="item">
-                    <img src="./Guitars.jpg" alt="Guitars">
-                    <p>Guitars</p>
+                    <img src="./guitars.jpg" alt="guitars">
+                    <p>guitars</p>
                 </div>
                 <div class="item">
-                    <img src="./Keyboards.jpg" alt="Keyboards">
-                    <p>Keyboards</p>
+                    <img src="./keyboards.jpg" alt="keyboards">
+                    <p>keyboards</p>
                 </div>
                 <div class="item">
                     <img src="./Drums.jpg" alt="Drums">
@@ -325,4 +325,5 @@
 </body>
 
 </html>
+
 
