--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p>Lily Live Plant</p>
                 </div>
                 <div class="item">
-                    <img src="./Analog_Silent_Clock.jpg" alt="Analog Silent Clock">
+                    <img src="./Analog_silent_clock.jpg" alt="Analog Silent Clock">
                     <p>Analog Silent Clock</p>
                 </div>
                 <div class="item">
@@ -155,7 +155,7 @@
                     <p>Men's Grooming</p>
                 </div>
                 <div class="item">
-                    <img src="./Best_Sellers.jpg" alt="Best Sellers">
+                    <img src="./Best_sellers.jpg" alt="Best Sellers">
                     <p>Best Sellers</p>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <p>Dresses</p>
                 </div>
                 <div class="item">
-                    <img src="./Pants.jpg" alt="Pants">
+                    <img src="./pants.jpg" alt="Pants">
                     <p>Pants</p>
                 </div>
                 <div class="item">
@@ -325,5 +325,6 @@
 </body>
 
 </html>
+
 
 
